k8s/o3api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: o3api
spec:
  replicas: 1
  selector:
    matchLabels:
      name: o3api
  template:
    metadata:
      labels:
        name: o3api
    spec:
      nodeName: vnode-1.localdomain
      #nodeSelector:
      #  node-role.kubernetes.io/master: ''
      containers:
      - name: o3api
        image: o3as/o3api
        imagePullPolicy: Always
        resources:
          requests:
            memory: "2Gi"
            cpu: "2100m"
          limits:
            memory: "2.5Gi"
            cpu: "2300m"
        ports:
        - containerPort: 5005
          name: port0
        #tolerations:
        #- key: node-role.kubernetes.io/master
        #  effect: NoSchedule
        volumeMounts:
        - mountPath: /mnt/o3as-data
          name: o3as-data
      volumes:
      - name: o3as-data
        hostPath:
          path: /mnt/o3as-data
          type: Directory

# Service
---
kind: Service
apiVersion: v1
metadata:
  name: o3api-service
spec:
  selector:
    name: o3api
  ports:
    - protocol: TCP
      name: http2
      port: 5005
      nodePort: 30505
  type: NodePort
