k8s/o3as-api-test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: o3as-api-test
spec:
  replicas: 1
  selector:
    matchLabels:
      name: o3as-api-test
  template:
    metadata:
      labels:
        name: o3as-api-test
    spec:
      nodeName: vnode-2.localdomain
      #nodeSelector:
      #  node-role.kubernetes.io/master: ''
      containers:
      - name: o3as-api-test
        image: synergyimk/o3as:test
        imagePullPolicy: Always
        resources:
          requests:
            memory: "2Gi"
            cpu: "2100m"
          limits:
            memory: "2.5Gi"
            cpu: "2300m"
        ports:
        - containerPort: 5005
          name: port0
        #tolerations:
        #- key: node-role.kubernetes.io/master
        #  effect: NoSchedule
        volumeMounts:
        - mountPath: /mnt/o3as-sshfs
          name: o3as-sshfs
      volumes:
      - name: o3as-sshfs
        hostPath:
          path: /mnt/o3as-sshfs
          type: Directory

# Service
---
kind: Service
apiVersion: v1
metadata:
  name: o3as-service-test
spec:
  selector:
    name: o3as-api-test
  ports:
    - protocol: TCP
      name: http2
      port: 5005
      nodePort: 30509
  type: NodePort
