k8s/o3api-ingress.v2.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: o3api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-site"
#    nginx.ingress.kubernetes.io/ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

spec:
  tls:
  - hosts:
    - test.o3as.fedcloud.eu
    secretName: site-tls

  rules:
  - host: test.o3as.fedcloud.eu
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          serviceName: o3api-service
          servicePort: 5005
      - path: /
        pathType: Exact
        backend:
          serviceName: o3api-service
          servicePort: 5005
